--- a/_layouts/datahide.html
+++ b/_layouts/datahide.html
@@ -8,7 +8,7 @@ layout: post
     <table>
     <tr><td><b>Venue:</b> </td><td>{{ page.venue | markdownify }} </td></tr>
     <tr><td><b>Date:</b> </td><td>{{ page.date | date: "%b %-d, %Y" }}</td></tr>
-    <tr><td><b>Tickets:</b> </td><td>{{ page.tickets | markdownify }} (Registration is compulsory)</td></tr>
+    {% if page.tickets %}<tr><td><b>Tickets:</b> </td><td>{{ page.tickets | markdownify }} (Registration is compulsory)</td></tr>{% endif %}
     </table>
     <table>
       {% for talk in page.talks %}
