--- a/_layouts/datahide.html
+++ b/_layouts/datahide.html
@@ -5,16 +5,16 @@ layout: post
 
   <article class="post-content">
     {{ page.tagline }}
-    <table>
-    <tr><td><b>Venue:</b> </td><td>{{ page.venue | markdownify }} </td></tr>
-    <tr><td><b>Date:</b> </td><td>{{ page.date | date: "%b %-d, %Y" }}</td></tr>
-    {% if page.tickets %}<tr><td><b>Tickets:</b> </td><td>{{ page.tickets | markdownify }} (Registration is compulsory)</td></tr>{% endif %}
-    </table>
-    <table>
+    <ul>
+      <li><b>Venue:</b> {{ page.venue | markdownify }} </li>
+      <li><b>Date:</b> {{ page.date | date: "%b %-d, %Y" }}</li>
+      {% if page.tickets %}<li><b>Tickets:</b> {{ page.tickets | markdownify }} (Registration is compulsory)</li>{% endif %}
+    </ul>
+    <ul>
       {% for talk in page.talks %}
-      <tr><td>{{ talk.start }} - {{ talk.end }}</td><td> <b>{{ talk.title | markdownify }}</b> </td><td> {{ talk.speaker | markdownify }}</td>
+      <li>{{ talk.start }} - {{ talk.end }} <b>{{ talk.title | markdownify }}</b> {{ talk.speaker | markdownify }}</li>
       {% endfor %}
-    </table>
+    </li>
     <p>There will be food and drink by <a href="http://www.percyandlilys.co.uk/">Percy and Lilly's</a>
 
     {{ content }}
